Fix broken inverted buttons

--- a/scss/Button.scss
+++ b/scss/Button.scss
@@ -34,6 +34,6 @@
   background-color: rgba($danger-color, 0.7);
 }
 
-.button__hover {
+.button--inverted.button--danger:hover {
   background-color: $danger-color;
 }
